--- a/delete_package.yml
+++ b/delete_package.yml
@@ -8,11 +8,11 @@
   tasks:
   - name: ========== GET PACKAGE FOLDER ==========
     shell: echo {{ package }} | cut -f1 -d"-"
-    register: folder.stdout
+    register: folder
   
   - name: ========== REMOVE PACKAGAGE "{{ pkg }}" ==========
     uri:
-      url: "http://35.192.120.104/artifactory/build/{{ folder }}/{{ pkg }}"
+      url: "http://35.192.120.104/artifactory/build/{{ folder.stdout }}/{{ pkg }}"
       method: DELETE
       user: __jfUser__
       password: __jfPass__
