--- a/delete_package.yml
+++ b/delete_package.yml
@@ -6,15 +6,23 @@
     pkg: "{{ package }}" 
  
   tasks:
-  - name: ========== GET PACKAGE FOLDER ==========
-    shell: echo {{ package }} | cut -f1 -d"-"
-    register: folder
+  #- name: ========== GET PACKAGE FOLDER ==========
+  #  shell: echo {{ package }} | cut -f1 -d"-"
+  #  register: folder
   
-  - name: ========== REMOVE PACKAGAGE "{{ pkg }}" ==========
-    uri:
-      url: "http://35.192.120.104/artifactory/build/{{ folder.stdout }}/{{ pkg }}"
-      method: DELETE
-      user: __jfUser__
-      password: __jfPass__
-      force_basic_auth: yes
-      status_code: 204
+  #- name: ========== REMOVE PACKAGAGE "{{ pkg }}" ==========
+  #  uri:
+  #    url: "http://35.192.120.104/artifactory/build/{{ folder.stdout }}/{{ pkg }}"
+  #    method: DELETE
+  #    user: __jfUser__
+  #    password: __jfPass__
+  #    force_basic_auth: yes
+  #    status_code: 204
+  
+   - name: Extract files
+     unarchive: 
+      src: {{ pkg }}
+      dest: /tmp
+      remote_src: yes
+      list_files: yes
+    register: archive_contents
