--- a/delete_package.yml
+++ b/delete_package.yml
@@ -37,6 +37,7 @@
     file:
       state: absent
       path: "/buildspace/buildTools/{{ archive_contents.files[0] }}"
+    become: yes
       
      
       
