--- a/delete_package.yml
+++ b/delete_package.yml
@@ -28,6 +28,12 @@
       list_files: yes
     register: archive_contents
     
+  - name: "{{ archive_contents.files[0] }} package will be deleted"    
+    file:
+      state: absent
+      path: /tmp/xx
+
+    
   - name: "{{ archive_contents.files[0] }}  DEB package will be deleted"
     debug:
       var: archive_contents.files[0]
