--- a/delete_package.yml
+++ b/delete_package.yml
@@ -14,6 +14,10 @@
       url_password: __jfPass__
       mode: 0440
       
+  - name: ===================== DBG =====================
+    debug:
+      msg: "{{ pkg.split('.') }}"
+      
   - name: xr fold
     file:
       path: /tmp/xx
